--- a/GeoStoryApp/www/index.html
+++ b/GeoStoryApp/www/index.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <meta http-equiv="Content-Security-Policy" content="default-src * gap:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <link rel="stylesheet" type="text/css" href="css/buttons.css" />
-        <title>PhoneGap Day Wikitude AR Demo</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Augmented Reality</h1>
-            <p class="subtext">Powered by Wikitude</p>
-            <p>Press this button and point your phone to a PhoneGap Day T-Shirt</p>
-                <a href="#" id="launch-demo" class="button button-action button-rounded">Fun happy demo time!</a>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Where I parked my car</title>
+      <link rel="stylesheet" href="css/jquery.mobile-1.2.0.min.css" type="text/css" media="all" />
+      <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+      <script src="js/jquery-1.8.3.min.js"></script>
+      <script src="js/jquery.mobile.config.js"></script>
+      <script src="js/jquery.mobile-1.2.0.min.js"></script>
+      <script src="cordova.js"></script>
+      <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+      <script src="js/functions.js"></script>
+      <script src="js/maps.js"></script>
+      <script src="js/positions.js"></script>
+      <script>
+         $(document).one('deviceready', initApplication);
+      </script>
+   </head>
+   <body>
+      <div id="welcome-page" data-role="page">
+         <header data-role="header">
+            <h1>Where I parked my car</h1>
+         </header>
+         <div id="content" data-role="content">
+            <p>
+               Where I parked my car lets you bookmark where you parked your car on a map
+               and then find a route when you want to return to it. The app will also
+               save a log of your saved positions (up to 50).
+            </p>
+            <a href="map.html?requestType=set" id="set-car-position" data-role="button">Set position</a>
+            <a href="map.html?requestType=get" id="find-car" data-role="button">Find car</a>
+            <a href="positions.html" id="positions-history" data-role="button">Positions history</a>
+         </div>
+         <footer data-role="footer">
+            <h3>Created by Aurelio De Rosa</h3>
+            <a href="aurelio.html" data-icon="info" data-iconpos="notext" class="ui-btn-right">Credits</a>
+         </footer>
+      </div>
+   </body>
 </html>
