--- a/GeoStoryApp/platforms/browser/www/index.html
+++ b/GeoStoryApp/platforms/browser/www/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Where I parked my car</title>
-      <link rel="stylesheet" href="css/jquery.mobile-1.2.0.min.css" type="text/css" media="all" />
+      <link rel="stylesheet" href="css/jquery.mobile.squareui.min.css" type="text/css" media="all" />
       <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
       <script src="js/jquery-1.8.3.min.js"></script>
       <script src="js/jquery.mobile.config.js"></script>
